--- a/src/drum-machine.css
+++ b/src/drum-machine.css
@@ -90,10 +90,21 @@ div {
 
 @media screen and (max-width:600px) {
   .pad-container {
+    grid-template-columns: 29% 29% 29%;
     grid-column-gap: 2%;
   }
-  .pad-container {
-    grid-template-columns: 28% 28% 28%;
+  
+  #display {
+    width:100%;
+  }
+  
+  .drum-pad {
+    box-sizing: border-box;
+    height: 120px;
+  }
+  
+  h1 {
+    margin-bottom: 0;
   }
 }
 
